--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="display">0</div>
+        <div class="display">
+            <div class="displayup"></div>
+            <div class="displaydown"></div>
+        </div>
         <div class="buttons">
             <div class="buttonsnum">
                 <button>1</button>
@@ -23,6 +26,7 @@
                 <button>8</button>
                 <button>9</button>
                 <button>0</button>
+                <button>.</button>
             </div>
             <div class="buttonsop">
                 <button>C</button>
