--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <button>.</button>
             </div>
             <div class="buttonsop">
-                <button>C</button>
-                <button>/</button>
-                <button>*</button>
+                <button>AC</button>
+                <button>÷</button>
+                <button>x</button>
                 <button>-</button>
                 <button>+</button>
                 <button>=</button>
