--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
                 <button>9</button>
                 <button>0</button>
                 <button>.</button>
+                <button>⌫</button>
             </div>
             <div class="buttonsop">
-                <button>AC</button>
+                <button class="clear">AC</button>
                 <button>÷</button>
                 <button>x</button>
                 <button>-</button>
                 <button>+</button>
-                <button>=</button>
+                <button class="equal">=</button>
             </div>
         </div>
     </div>
