--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <button>9</button>
                 <button>0</button>
                 <button>.</button>
-                <button>⌫</button>
+                <button class="erase">⌫</button>
             </div>
             <div class="buttonsop">
                 <button class="clear">AC</button>
